Fix datepickers clipping in procedures tables

--- a/app/assets/stylesheets/custom/bootstrap-table-custom.scss
+++ b/app/assets/stylesheets/custom/bootstrap-table-custom.scss
@@ -67,7 +67,7 @@
 .bootstrap-table {
   .fixed-table-container {
     .fixed-table-body {
-      overflow: visible;
+      overflow: auto;
 
       .fixed-table-loading {
         border-top: 0;
@@ -93,7 +93,7 @@
       }
 
       &.focus {
-        background: theme-color-level('light', 2.5); 
+        background: theme-color-level('light', 2.5);
       }
     }
   }
