--- a/app/assets/stylesheets/custom/tempusdominus-custom.scss
+++ b/app/assets/stylesheets/custom/tempusdominus-custom.scss
@@ -35,3 +35,9 @@
     }
   }
 }
+
+body > div.bootstrap-datetimepicker-widget.dropdown-menu {
+  position: absolute;
+  width: initial;
+  bottom: auto !important;
+}
